# LightRAG

./: .gitignore  pyproject.toml
examples/: .env.example  knowledge_graph.html  lightrag_api_oracle_cs_demo.py
examples/templates/: chat.html
lightrag/kg/: oracle_impl.py
