[tool.poetry]
package-mode = false
name = "Light RAG"
version = "0.1.0"
description = "Light RAG"
authors = ["Walter <jinshuhaicc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
accelerate = "^1.0.1"
aioboto3 = "^13.2.0"
aiohttp = "^3.10.10"
#graspologic = "^3.4.1"
hnswlib = "^0.8.0"
nano-vectordb = "^0.0.4.1"
networkx = "^3.4.2"
ollama = "^0.3.3"
openai = "^1.52.2"
pyvis = "^0.3.2"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
torch = "^2.5.0"
transformers = "^4.46.0"
xxhash = "^3.5.0"
lightrag-hku = "^0.0.8"
nest-asyncio = "^1.6.0"
oci = "^2.137.0"
python-decouple = "^3.8"
oracledb = "^2.5.1"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
graspologic = "^3.4.1"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
extend-select = [
  # "I",    # isort
#   "B",    # flake8-bugbear
#   "C4",   # flake8-comprehensions
#   "PGH",  # pygrep-hooks
  # "RUF",  # ruff
#   "W",    # pycodestyle
#   "YTT",  # flake8-2020
]
ignore = [
    "F403",
    "F405",
]